--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "electron-quick-start",
+  "name": "electron-todo",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "A minimal todo application",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
